# internal/modules/file/dto.go
@@ -1,0 +1,17 @@
+package file
+
+type PaginatedResponse[T any] struct {
+	Page       int   `json:"page" example:"1"`
+	PageSize   int   `json:"page_size" example:"10"`
+	TotalItems int64 `json:"total_items" example:"125"`
+	TotalPages int   `json:"total_pages" example:"13"`
+	Data       []T   `json:"data"`
+}
+
+type CreateFileRequest struct {
+	Names []string `json:"names"`
+}
+
+type DeleteFilesRequest struct {
+	IDs []int64 `json:"ids"`
+}
